--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openengsb.domain</groupId>
   <artifactId>openengsb-domain-issue</artifactId>
-  <version>1.2.0</version>
+  <version>1.2.1-SNAPSHOT</version>
 
   <name>OpenEngSB :: Domain :: Issue</name>
 
