--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0.M2</version>
   </parent>
 
   <properties>
