--- a/pom.xml
+++ b/pom.xml
@@ -23,20 +23,20 @@
   <parent>
     <groupId>org.openengsb.domain</groupId>
     <artifactId>openengsb-domain-parent</artifactId>
-    <version>2.4.0</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <properties>
     <bundle.symbolicName>org.openengsb.domain.issue</bundle.symbolicName>
     <bundle.namespace>org.openengsb.domain.issue</bundle.namespace>
     <domain.name>IssueDomain</domain.name>
-    <openengsb.compile.version>2.1.2</openengsb.compile.version>
+    <openengsb.compile.version>3.0.0-SNAPSHOT</openengsb.compile.version>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openengsb.domain</groupId>
   <artifactId>org.openengsb.domain.issue</artifactId>
-  <version>2.1.0-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
 
   <name>OpenEngSB :: Domain :: Issue</name>
 
