--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,20 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>wagon-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Delegation-Annotations>true</Delegation-Annotations>
+            <Provide-Models>true</Provide-Models>
+            <Domain-Name>issue</Domain-Name>
+            <Domain-Interface>org.openengsb.domain.issue.IssueDomain</Domain-Interface>
+            <DomainEvents-Interface>org.openengsb.domain.issue.IssueDomainEvents</DomainEvents-Interface>
+          </instructions>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
